--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-screens": "3.31.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7"
+    "expo-image-picker": "~15.0.7",
+    "@expo/metro-runtime": "~3.2.3",
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
